<resources>
    <string name="MENU_ABOUT">About</string>
    <string name="MENU_DIRECTORY">Include Directory</string>
    <string name="MENU_EXIT">Exit</string>
    <string name="MENU_FEEDBACK">Feedback</string>
    <string name="MENU_GROUND">Change BG</string>
    <string name="MENU_HELP">Help</string>
    <string name="MENU_REFRESH">Refresh</string>
    <string name="MENU_SHARE">Share</string>
    <string name="MENU_Star">Settings</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">关于</string>
    <string name="about_address">"http://www.mrpej.com 
天使之翼.版权所有！
© 2013-2015"</string>
    <string name="about_contact">Mailbox</string>
    <string name="about_jamendo">About Mrpoid</string>
    <string name="about_link">mrpoid@163.com</string>
    <string name="about_note">"天使之翼.版权所有！
© 2013-2015"</string>
    <string name="about_sum">mrpoid2018 remake version, exchange group: 209533157</string>
    <string name="about_teleca">About Verion Updates</string>
    <string name="accept">Accept</string>
    <string name="action_settings">Settings</string>
    <string name="add_favorite">Add to Favourites</string>
    <string name="app_desc">MRP World On Android</string>
    <string name="app_name">Mythras</string>
    <string name="app_name_brw">Browser</string>
    <string name="app_name_en">MYTHRAS</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="background">Background</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="catch_volumekey">Capture Volume Keys</string>
    <string name="catch_volumekey_sum">Use volume keys as up/down.</string>
    <string name="changelog">Changelog</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_update">Update</string>
    <string name="choose_one">Select A Profile</string>
    <string name="close">Back</string>
    <string name="color">Color Scheme</string>
    <string name="comp">Compatibility Mode</string>
    <string name="cpoy_right">CopyRight © 2013#8211;2015 天使之翼</string>
    <string name="create">Create</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="ct_vm">VM Settings</string>
    <string name="dark">Night Mode</string>
    <string name="def_screensize">240x320</string>
    <string name="detail_set">Advanced Settings</string>
    <string name="down_ing">Downloading</string>
    <string name="down_ok">Download successful.</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="dpad_at_left">Directional keyboard on the left.</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_title">Navigation</string>
    <string name="emu_settings">Mrpoid Settings</string>
    <string name="emu_title">Choose Emulator</string>
    <string name="enable_exram">Enable Extended Memory</string>
    <string name="enable_exram_sum">The possibility of crashing after opening will increase!</string>
    <string name="enable_touch_virb">Key Vibration</string>
    <string name="enable_vkeypad">Virtual Keyboard</string>
    <string name="entry_background">Background Processes</string>
    <string name="exit">Exit</string>
    <string name="exit_all">Exit All</string>
    <string name="file_explorer">File Explorer</string>
    <string name="filehandle">File Processing</string>
    <string name="float_button_func">Floating Button Function</string>
    <string name="float_view">Floating Window</string>
    <string name="font_settings">Font Settings</string>
    <string name="full_screen">Full Screen</string>
    <string name="fullscn_editor">Edit Full Screen</string>
    <string name="gift">Reward</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">Help</string>
    <string name="hide">Hide</string>
    <string name="hint">Tips</string>
    <string name="hint_again_to_exit">Press again to exit!</string>
    <string name="hint_click_to_back">Click back.</string>
    <string name="hint_deving">In Development...</string>
    <string name="hit_slid_to_showmenu">Slide the edge of the screen to pop up a menu!</string>
    <string name="image">Image</string>
    <string name="include_dir">Include Directory</string>
    <string name="input_settings">Input Settings</string>
    <string name="key_sprite">Key Sprites</string>
    <string name="keypad_layout">Keypad Layout</string>
    <string name="light">Light Mode</string>
    <string name="limit_input_length">Input Word Limit</string>
    <string name="limit_input_length_sum">If you do not limit the possibility of flashbacks, it will increase!</string>
    <string name="loading">Loading</string>
    <string name="log_file">File I/O</string>
    <string name="log_filter">Log Filter</string>
    <string name="log_filter_sum">Select the type of log to display.</string>
    <string name="log_fw">Frame</string>
    <string name="log_input">Event Input</string>
    <string name="log_mrplat">mr_plat/mr_platEx</string>
    <string name="log_mrprintf">mr_printf</string>
    <string name="log_net">Internet Logs</string>
    <string name="log_settings">Log Settings</string>
    <string name="log_timer">Log Timer</string>
    <string name="login">Login</string>
    <string name="maintainers">"Mythras is a fork of the original mrpoid2018 build by Yichou.
 To see the full changelog visit: 
 https://github.com/CounsellorPolonius/mythras"</string>
    <string name="mem_size">Memory Size</string>
    <string name="menu">Menu</string>
    <string name="menu_download">Browse</string>
    <string name="mid_screen">Center Display</string>
    <string name="more">More...</string>
    <string name="mrp_version">Version</string>
    <string name="mrpinfo">App Information</string>
    <string name="msg_click_load">Click to Load List.</string>
    <string name="mythroad_path">Set Mythroad Path.</string>
    <string name="nav_explorer">File Browser</string>
    <string name="nav_local">My Applications</string>
    <string name="nav_settings">Setup</string>
    <string name="nav_store">Online Store</string>
    <string name="no_key">My phone has no buttons.</string>
    <string name="no_key_sum">When the phone does not have any buttons, some operating habits need to be changed, such as the Nexus series!</string>
    <string name="ok">Ok</string>
    <string name="option">Options</string>
    <string name="orientation">Orientation</string>
    <string name="other">Other</string>
    <string name="other_settings">Advanced Settings</string>
    <string name="pad_opacity">Keypad Transparency</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pft_fps">OpenGL Frame Rate</string>
    <string name="platdrawchar_summery">Use system font as MRP font.</string>
    <string name="platscreenbuf">System screen buffer.</string>
    <string name="platscreenbuf_summery">System fonts can only be used when enabled.</string>
    <string name="private_dir">Private Directory</string>
    <string name="private_dir_sum">Store MRP files in a private directory, you may need root access.</string>
    <string name="refresh">Refresh</string>
    <string name="refused">Refuse</string>
    <string name="remove">Remove</string>
    <string name="remove_from_list">Remove From List</string>
    <string name="restart_mrpoid">Restart Mrpoid Kernel</string>
    <string name="run_mode">Select Emulator</string>
    <string name="run_under_multi_path">Different resolutions and different paths.</string>
    <string name="scaling_mode">Zoom Mode</string>
    <string name="scnshot">Screenshot</string>
    <string name="screen_on">Keep Screen On</string>
    <string name="screensize">Screen Size</string>
    <string name="show_fps">Show FPS</string>
    <string name="sum_comp">You can try to change the crash.</string>
    <string name="sum_diy_model">Manufacturer-model(aux-m625)</string>
    <string name="sum_gl">Turn on to speed up screen.</string>
    <string name="sum_pause">Suspension may cause network disconnection.</string>
    <string name="switch_keypad">Switch Keypad</string>
    <string name="theme">Theme</string>
    <string name="title_diy_model">Custom Models</string>
    <string name="title_diy_model_b">Use Custom Models</string>
    <string name="title_help">Help</string>
    <string name="title_pause">Background Pause</string>
    <string name="tools">Profiles</string>
    <string name="use_full_dsm">Full Version VM</string>
    <string name="use_full_dsm_sum">Use a virtual machine with mr interpretation function, it may not be stable in the streamlined version！</string>
    <string name="use_gl">Enable OpenGL</string>
    <string name="use_scaleFilter">Anti-Aliasing</string>
    <string name="version">Mrpoid Version </string>
    <string name="version_summery">"%s daily
Build by CounsellorPolonius 2021"</string>
    <string name="video_settings">Display Settings</string>
</resources>